--- a/styles/styles.css
+++ b/styles/styles.css
@@ -21,14 +21,13 @@ body {
 img {
     width: 100%;
     border-radius: 8px;
-    background-color: var(--cyan);
 }
 
-img:hover{
+.imghtc:hover{
     cursor: pointer;
 }
 
-img:active{
+.imghtc:active{
     filter: opacity(50%) drop-shadow(0 0 0 var(--cyan));
 }
 
